<?xml version="1.0"?>
<package format="2">
  <name>vive_ros</name>
  <version>0.0.1</version>
  <description>The vive_ros package</description>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/vive_ros</url>
  <url type="repository">https://github.com/robosavvy/vive_ros</url>
  <maintainer email="vmatos@robosavvy.com">Vitor Matos</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>openvr</depend>
</package>
